# Todalu

./: .gitignore  CMakeLists.txt  README.org
scripts/: compile.sh
scripts/test/: factorial.tdl  fibonacci.js  fibonacci.py  fibonacci.tdl  fizzbuzz.tdl  hello-world.tdl  test.tdl
src/: ast.cpp  common.cpp  compile.cpp  eval.cpp  granthalaya.tdl  interpret.cpp  main.cpp  repl.cpp  trt.cpp
src/include/: ast.h  common.h  compile.h  eval.h  interpret.h  repl.h  trt.h
testscripts/: factorial.tdl  fibonacci.tdl  fizzbuzz.tdl  for.tdl  hello-world.tdl
